apps/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server
  namespace: pihole
spec:
  replicas: 1
  serviceName: pihole
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: server
          image: pihole/pihole:latest
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /admin
              port: 80
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-etc
            - mountPath: /etc/dnsmasq.d
              name: dnsmasq
      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: dnsmasq
          emptyDir: {}
