apps/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.berlin.bruegner.com
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 80
        path: /
        pathType: Prefix
